--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@mui/styled-engine-sc": "^7.3.2",
     "@tailwindcss/vite": "^4.1.13",
     "axios": "^1.12.2",
+    "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
     "react-is": "^18.3.1",
     "react-router-dom": "^7.9.3",
     "styled-components": "^6.1.19",
