--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "antd": "^5.27.4",
     "axios": "^1.12.2",
     "lucide-react": "^0.544.0",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
